base structure created

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,33 @@
   </head>
 
   <body>
-    <h1 class="e">Hello</h1>
+    <header>
+      <h1 class="caption">Hello, this is 100 front pens by <span class="caption-name">andrew morozow</span></h1>
+    </header>
+
+    <main class="container">
+      <a href="" class="project-link">
+        <section class="project">
+          <header>
+            <p class="project-date">18.01.17</p>
+          </header>
+            <h3 class="project-name">CSS random animation</h3>
+            <p class="project-number">#001</p>
+            <p class="project-technology">html/css</p>
+        </section>
+      </a>
+
+      <a href="" class="project-link">
+        <section class="project">
+          <header>
+            <p class="project-date">18.01.17</p>
+          </header>
+            <h3 class="project-name">CSS random animation</h3>
+            <p class="project-number">#001</p>
+            <p class="project-technology">html/css</p>
+        </section>
+      </a>
+    </main>
 
     <script src="js/libs.min.js"></script>
     <script src="js/global.js"></script>
